tests/baselines/reference/unicodeExtendedEscapesInTemplates06_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates06_ES5.ts(4,12): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates06_ES5.ts (1 errors) ====
    
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  1. Assert: 0 ≤ cp ≤ 0x10FFFF.
    var x = `\u{10FFFF}`;
               
!!! error TS1125: Hexadecimal digit expected.
    